...
      }}
    >
      <AppTab.Screen
        name="Home"
        component={DailyLogScreen}
        options={{
          title: 'Início',
          tabBarIcon: ({ color, size }) => <Ionicons name="home-outline" size={size} color={color} />,
        }}
      />
      <AppTab.Screen
        name="Report"
        component={DailyReportScreen}
...
        }}
      />
      <AppTab.Screen
        name="Profile"
        component={ProfileScreen}
        options={{
          title: 'Perfil',
          tabBarIcon: ({ color, size }) => <Ionicons name="person-outline" size={size} color={color} />,
        }}
      />
    </AppTab.Navigator>
  )
}
...
